[package]
name = "make-it-short"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0.189", features = ["derive"] }
serde_json = "1.0.107"

# Async runtime
tokio = { version = "1.33.0", features = ["full"] }

# HTTP
axum = { version = "0.6.20", features = ["tracing"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.17"

# database
mysql = "24.0.0"
clap = { version = "4.4.7", features = ["derive"] }
